--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_slidable: ^1.2.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
