--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_slidable: ^1.2.0
   google_nav_bar: ^5.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
