--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: money_manager
+name: ceremoney
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider:
-  fl_chart: ^0.60.0
+  fl_chart: ^0.63.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_slidable: ^1.2.0
